static/css/base.css
html {
	height: 100%;
}

body {
	background: url('/media/abstract_background.png') no-repeat center center fixed;
	background-size: cover;
	height: calc(100vh - 164px);
	font-family: 'Roboto Slab';
	z-index: 1;
	padding-top: 50px;
	overflow-x: hidden;
	/* Hide horizontal scrollbar */
}


/* added in scrollbar to work but not be visible */

body:-webkit-scrollbar {
	display: none;
}


/* Logo Font Style */

.logo-text-store {
	text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1), 0px 18px 23px rgba(0, 0, 0, 0.1);
}


/* from Bulma */

.icon {
	align-items: center;
	display: inline-flex;
	justify-content: center;
	height: 1.5rem;
	width: 1.5rem;
}


/* Card settings */

.product_detail_card {
	margin: 0 auto;
	/* Added */
	float: none;
	/* Added */
	margin-bottom: 10px;
	/* Added */
	background-color: #f4f4f4;
	margin-top: 25px;
	position: relative;
}


/* Delivery Banner */

.delivery-banner {
	background-color: #5cdb95;
	border-color: #edf5e1;
	padding: 25px;
	box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255), 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
	background: linear-gradient(-45deg, #5cdb95, #8ee4af, #edf5e1, #5db27f);
	background-size: 400% 400%;
	animation: gradient 15s ease infinite;
}

@keyframes gradient {
	0% {
		background-position: 0% 50%;
	}
	50% {
		background-position: 100% 50%;
	}
	100% {
		background-position: 0% 50%;
	}
}

.delivery-banner {
	transition: top 0.5s ease;
}

.delivery-banner-hide {
	top: -56px;
}

.delivery-banner-hide {
	top: -56px;
}

.delivery-banner {
	opacity: 1;
	transition: opacity 0.5s ease;
}

.delivery-banner-hide {
	pointer-events: none;
	opacity: 0;
}

.delivery-banner h4 {
	color: #05386b;
}


/* Header */

.bg-back {
	background-color: #42629a;
}

.bottom-header {
	background-color: #42629a;
	margin-top: 15px;
	margin-bottom: 15px;
	border-color: #edf5e1;
	padding: 20px;
	box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255), 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
	background: linear-gradient(-45deg, #42629a, #7c96c2, #050505, #6787be);
	background-size: 400% 400%;
	animation: gradient 15s ease infinite;
}

@keyframes gradient {
	0% {
		background-position: 0% 50%;
	}
	50% {
		background-position: 100% 50%;
	}
	100% {
		background-position: 0% 50%;
	}
}

#sorting_background {
	z-index: 2;
	color: #42629a;
	padding-bottom: 40px;
}

#header-content-bg {
	margin-top: 20px;
}

.card .header-card .col-md-12 {
	background: #5cdb95;
	border: #5cdb95;
	margin-top: 20px;
}

#header-1 {
	padding-top: 15px;
	background-color: rgba(255,255,255,0.8);
	
	border-color: #edf5e1;
	padding: 20px;
	box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255), 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
	height: fit-content;
}

.logo-font {
	text-transform: uppercase;
	color: #42629a;
	z-index: 33;
}

#header-background {
	background-color: #42629a;
	margin-bottom: 20px;
	padding: 15px;
	box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(0, 0, 0), 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
	height: fit-content;
	box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255), 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
	background: linear-gradient(-45deg, #42629a, #7c96c2, #050505, #6787be);
	background-size: 400% 400%;
	animation: gradient 15s ease infinite;
}

@keyframes gradient {
	0% {
		background-position: 0% 50%;
	}
	50% {
		background-position: 100% 50%;
	}
	100% {
		background-position: 0% 50%;
	}
}

.hr-color {
	color: black;
	height: 12px;
}

#product-amt-text {
	color: #42629a;
	z-index: 33;
}

.main-logo-link {
	width: fit-content;
}

#main-nav {
	color: #42629a;
}

.shop-now-button {
	background: #edf5e1;
	color: #edf5e1;
	font-weight: 600;
	min-width: 260px;
	z-index: 1;
	box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255), 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
}


/* Team css */

.college {
	color: gray;
	font-size: 18px;
}

.card-social a {
	text-decoration: none;
	font-size: 18px;
	color: black;
}

.card2 {
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
	max-width: 100%;
	margin: auto;
	margin-bottom: 10px;
	background-color: #edf5e1;
}

#dev-card {
	margin-bottom: 15px;
}

#header-padding-top {
	margin-bottom: 35px;
}


/* Checkout succuess text */

#bold-shopping-cart-text {
	font-weight: 400;
}


/* Product image */

.image-container {
	margin-top: 10px;
}

.btn-lg {
	color: #5cdb95;
}

.shop-now-button:hover a {
	color: black;
}

#btn-text-color {
	background-color: #8ee4af;
	color: #42629a;
	font-weight: 600;
	font-family: "Roboto-Slab";
}


/* Product Detail Buttons */

#btn-text-color1 {
	background-color: #42629a;
	color: #000;
	font-weight: 600;
	font-family: "Roboto-Slab";
}

.bg-color {
	background-color: #5cdb95;
}

#dev-btn {
	border-radius: 1;
	border-color: black;
}

.dev-btn-black:hover,
.dev-btn-black:active,
.dev-btn-black:focus {
	background: #edf5e1;
	color: #edf5e1;
	opacity: initial;
	z-index: -1;
}

.header-color {
	color: #edf5e1;
}

.map-top-header-bgcolor{
	margin-top: 15px;
	margin-bottom: 15px;
	padding: 20px;
	margin-left: 15px;
	margin-right: 15px;
	border: 4px solid;
  	box-shadow: 5px 10px black;
	  background: linear-gradient(-45deg, #42629a, #7c96c2, #050505, #6787be);
	  background-size: 400% 400%;
	  animation: gradient 15s ease infinite;
  }
  
  @keyframes gradient {
	  0% {
		  background-position: 0% 50%;
	  }
	  50% {
		  background-position: 100% 50%;
	  }
	  100% {
		  background-position: 0% 50%;
	  }
  }



 
.map-top-header-color {
	color: #edf5e1;
}

#btn-text-color:hover a {
	color: black;
}

#btn-text-color:hover,
.shop-now-button:hover,
.shop-now-button:active,
.shop-now-button:focus,
.btn-black:hover,
.btn-black:active,
.btn-black:focus {
	background: #edf5e1;
	color: #edf5e1;
	opacity: initial;
	z-index: -1;
}


/* Shopping bag button */

.btn-black1:hover,
.btn-black1:active,
.btn-black1:focus {
	background: #5cdb95;
	color: black;
}
/* ... */

